# derpiboorust

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs
src/adapter/: async.rs  mod.rs  sync.rs
src/models/: gallery.rs  id.rs  image.rs  mod.rs
src/request/: galleries.rs  gallery.rs  image.rs  lists.rs  mod.rs  response.rs  search.rs
src/request/image_list/: images.rs  mod.rs  watched.rs
