[package]
name = "derpiboorust"
version = "0.1.1"
authors = ["Max Eliseev <ralvke@gmail.com>"]
edition = "2018"
description = "ust bindings for Derpibooru API"
homepage = "https://github.com/ralvke/derpiboorust"
repository = "https://github.com/ralvke/derpiboorust"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "ralvke/derpiboorust", branch = "master" }

[dependencies]
reqwest = "0.9"
failure = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
chrono = { version = "0.4", features = ["serde"] }
